Fix text-align and size on course index

--- a/less/blog/custom.less
+++ b/less/blog/custom.less
@@ -48,12 +48,17 @@
       .make-small-column(12);
 
       h1 {
-        margin: 40px 0;
+        margin: 20px 0;
       }
 
+      p {
+        font-size: 16px;
+        text-align: justify;
+      }
     }
 
     .language-wrapper {
+      .top-buffer();
       .make-column(6);
       .make-small-column(12);
 
